--- a/src/pages/Tutorial/Tutorial.css
+++ b/src/pages/Tutorial/Tutorial.css
@@ -16,10 +16,12 @@
 .tutor-text {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
     padding-bottom: 20px;
     margin-top: 20px;
     border-bottom: 2px solid #22BBFF;
+
+    position: relative;
 }
 
 .title {
@@ -43,21 +45,22 @@
 
 .classes {
     display: flex;
+    gap: 20px;
     height: 180px;
+    margin-bottom: 20px;
     justify-content: space-between;
     align-items: center;
     
     position: relative;
 }
 
-.classes img,
-.classes .description {
+.classes img {
     height: 80%;
 }
 
 .classes .description {
-    border: 1px solid black;
-    margin-right: 50px;
+    border: 1px solid #736a5e;
+    margin-right: 10px;
     padding: 10px;
     text-align: center;
     width: 400px;
@@ -68,4 +71,17 @@
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+.circle-container {
+    display: flex;
+    gap: 5px;
+}
+
+.circle-container .circle {
+    color: #333;
+}
+
+.circle-container .circle.active {
+    color: white;
 }
