--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -31,3 +31,51 @@ nav .menu ul a {
     color: white;
 
 }
+
+nav .open-menu, nav .close-menu {
+    display: none;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+@media (max-width: 600px) {
+
+    nav .menu {
+        display: none;
+    }
+
+    nav .menu.active {
+        position: fixed;
+        display: block;
+        width: 60%;
+        height: 100vh;
+        background-color: #444;
+        top: 0;
+        right: 0;
+
+        z-index: 300;
+        padding-top: 40px;
+
+    }
+
+    nav .menu.active ul {
+        padding: 30px 50px;
+        flex-direction: column;
+        font-size: 18px;
+    }
+
+    nav .close-menu.active {
+        display: block;
+        position: fixed;
+        top: 10px;
+        right: 20px;
+        z-index: 400;
+    }
+    
+    nav .open-menu {
+        display: block;
+    }
+}
