--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -22,8 +22,27 @@ nav .logo img {
 
 nav .menu ul {
     display: flex;
-    gap: 15px;
+    gap: 20px;
     list-style-type: none;
+}
+
+nav .menu svg {
+    vertical-align: bottom;
+    color: #545A5F;
+}
+
+nav .menu .tutorial-icon {
+    color: #0096FF;
+}
+
+nav .menu .summon-icon {
+    height: 25px;
+}
+
+nav .menu ul li {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 nav .menu ul a {
@@ -48,16 +67,23 @@ nav .open-menu, nav .close-menu {
     }
 
     nav .menu.active {
-        position: fixed;
         display: block;
         width: 60%;
         height: 100vh;
-        background-color: #444;
+        
+        position: fixed;
         top: 0;
         right: 0;
 
+        background-color: #262A31;
+
         z-index: 300;
         padding-top: 40px;
+
+    }
+
+    nav .menu.active ul a {
+        color: #A8AAAD;
 
     }
 
@@ -70,8 +96,8 @@ nav .open-menu, nav .close-menu {
     nav .close-menu.active {
         display: block;
         position: fixed;
-        top: 10px;
-        right: 20px;
+        top: 15px;
+        right: 15px;
         z-index: 400;
     }
     
