--- a/src/pages/Tutorial/Tutorial.css
+++ b/src/pages/Tutorial/Tutorial.css
@@ -2,15 +2,20 @@
     background-color: #26292B;
 }
 
+
 .tutor-container {
     width: 1000px;
     max-width: 100%;
-
-
+    
+    
     margin: 0 auto;
     padding: 20px;
-
+    
     background-color: #1C1E1F;
+}
+
+.tutor-body.none .tutor-container {
+    display: none;
 }
 
 .tutor-text {
@@ -100,6 +105,11 @@ a {
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+.classes .arrow svg {
+    font-size: 80px;
+
 }
 
 .circle-container {
@@ -201,6 +211,10 @@ a {
         /* width: calc(100% + 40px); */
         width: 100%;
         line-height: 1.7;
+    }
+
+    .classes .arrow svg {
+        font-size: 45px;
     }
 
 
