--- a/src/pages/summon/Summon.css
+++ b/src/pages/summon/Summon.css
@@ -7,6 +7,18 @@
     margin-bottom: 20px;
 }
 
+.featured-op {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 80px;
+    margin-bottom: 20px;
+}
+
+.featured-op img {
+    height: 100%;
+}
+
 .banner-list {
     width: 100%;
     text-align: left;
@@ -76,10 +88,20 @@ table th, table td {
     /* height: 100px; */
     border: 1px solid #888;
     color: #4093d6;
-    padding-bottom: 10px;
+    padding: 10px 0;
     font-size: 20px;
 }
 
+.summon.five {
+    background-color: #FFB94D;
+    color: #222;
+}
+
+.summon.six {
+    background-color: #A23D07;
+    color: white;
+}
+
 .img-cont.icon img {
-    height: 80px;
+    height: 70px;
 }
