adding all-operators button

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -28,7 +28,7 @@ nav .menu ul {
 
 nav .menu svg {
     vertical-align: bottom;
-    color: #545A5F;
+    color: #F5F5F5;
 }
 
 nav .menu .tutorial-icon {
