--- a/src/pages/summon/Summon.css
+++ b/src/pages/summon/Summon.css
@@ -7,6 +7,11 @@
     margin-bottom: 20px;
 }
 
+.description h4 {
+    filter: brightness(1.4);
+    margin: 10px 0;
+}
+
 .featured-op {
     display: flex;
     align-items: center;
@@ -20,17 +25,46 @@
 }
 
 .banner-list {
+    background-color: #111;
+    margin-bottom: 10px;
+
+}
+
+.banner-list button {
     width: 100%;
     text-align: left;
     padding: 10px;
     font-size: 20px;
-    background-color: #111;
     border: 1px solid white;
     outline: none;
     color: white;
-
+    background-color: transparent;
     cursor: pointer;
     margin-bottom: 10px;
+}
+
+.banner-list .all-ops {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+    transition: 400ms;
+}
+
+.banner-list.clicked .all-ops {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: white;
+    padding: 10px;
+
+    visibility: visible;
+    opacity: 1;
+    height: 100%;
+}
+
+.banner-list .all-ops p {
+    color: #999;
 }
 
 .pull {
@@ -72,6 +106,7 @@ table th, table td {
     padding: 10px 40px;
     border: 1px solid rgb(56, 61, 63);
 }
+
 
 .summons {
     display: grid;
