--- a/src/pages/summon/Summon.css
+++ b/src/pages/summon/Summon.css
@@ -43,7 +43,7 @@
     margin-bottom: 10px;
 }
 
-.banner-list .all-ops {
+.banner-list .all-ops, .banner-list .all-ops h4, .banner-list .all-ops p {
     opacity: 0;
     visibility: hidden;
     height: 0;
@@ -55,11 +55,20 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
+    height: 100%;
     color: white;
     padding: 10px;
 
     visibility: visible;
     opacity: 1;
+    height: 100%;
+}
+
+.banner-list.clicked .all-ops h4, .banner-list.clicked .all-ops p {
+    visibility: visible;
+    opacity: 1;
+    width: 100%;
     height: 100%;
 }
 
